--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ h1{
 }
 section{
     display: flex;
+    margin-bottom: 140px;
 }
 .half-width{
     width: 50%;
@@ -30,3 +31,9 @@ section{
     background-image: url(img/top-banner.png);
     background-repeat: no-repeat;
 }
+.dream-big{
+    background-image: url(img/dream-bg.jpg);
+    background-repeat: no-repeat;
+    background-position: right;
+}
+
