--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body{
     font-family: 'Roboto', sans-serif;
     margin: 0;
+    text-transform: capitalize;
 }
 h1{
     font-size: 50px;
@@ -27,7 +28,7 @@ h2{
     background-image: linear-gradient(#fc5c7d, #6a82fb);
     color:white;
     padding:10px 35px;
-    border-radius: 5px;
+    border-radius: 7px;
     font-weight: 600;
 }
 .top-banner{
@@ -68,6 +69,10 @@ h2{
 footer p{
     text-align: center;
     text-decoration: underline;
+}
+.footer{
+    color:white;
+    background-color:darkolivegreen;
 }
 
 
